# logaddexp

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  liknorm.h  logaddexp-config.cmake.in  logaddexp.h
.github/workflows/: cmake.yml  deploy.yml  test.yml
cmake/: sanitizers.cmake  warnings.cmake
include/: logaddexp.h
include/logaddexp/: logaddexp.h
perf/: array  array.c  elapsed.h
test/: CMakeLists.txt  logaddexp.c  logaddexpf.c  logaddexpg.c  logaddexpgf.c  logaddexps.c  logaddexpsf.c  logaddexpss.c
