function(logaddexp_add_test name)
    set(target test_${name})
    add_executable(${target} ${name}.c)
    target_link_libraries(${target} LOGADDEXP::logaddexp)
    set_target_properties(${target} PROPERTIES C_STANDARD 99)
    add_test(NAME ${name} COMMAND ${target})
    target_compile_options(${target} PRIVATE ${WARNING_FLAGS})
    target_compile_definitions(${target} PRIVATE $<$<BOOL:${WIN32}>:_CRT_SECURE_NO_WARNINGS>)
    target_compile_definitions(${target} PRIVATE $<$<BOOL:${WIN32}>:_CRT_NONSTDC_NO_DEPRECATE>)
endfunction()

logaddexp_add_test(logaddexp)
logaddexp_add_test(logaddexpf)
logaddexp_add_test(logaddexpg)
logaddexp_add_test(logaddexpgf)
logaddexp_add_test(logaddexps)
logaddexp_add_test(logaddexpsf)
logaddexp_add_test(logaddexpss)
